sfdx-source/common-base/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/fields/FieldsetName__c.field-meta.xml
<CustomField>
    <fullName>FieldsetName__c</fullName>
    <description>The name of the fieldset containing the items that will be added to the selector.</description>
    <inlineHelpText>The name of the fieldset containing the items that will be added to the selector.</inlineHelpText>
    <label>Fieldset Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>