sfdx-source/common-base/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>Specifies the selector, via the SObject Type, to which the fieldset&#39;s items will be added.</description>
    <inlineHelpText>Specifies the selector, via the SObject Type, to which the fieldset&#39;s items will be added.</inlineHelpText>
    <label>SObjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Selector_Config_Fieldset_Inclusions</relationshipLabel>
    <relationshipName>Selector_Config_Fieldset_Inclusions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>